# debug-mlir-toy

./: CMakeLists.txt  Makefile  README.md  docker-compose.yml
docker/dev/: Dockerfile
docker/mlir/: Dockerfile
scripts/: demo  fix_compile_commands
toy/: CMakeLists.txt
toy/ch1/: CMakeLists.txt
